# conty-backend-challenge

submissions/cezarfuhr/pix/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test.db
submissions/cezarfuhr/pix/app/: api.py  database.py  dependencies.py  limiter.py  main.py  models.py  repository.py  services.py
submissions/cezarfuhr/pix/app/core/: config.py  logging_config.py
submissions/cezarfuhr/pix/docs/sagas/: 01_fundacao_from_scratch.md  02_contratos_e_testes.md  03.1_seguranca_api_e_dados.md  03_repositorio_e_idempotencia.md  04_servico_de_processamento.md  05_api_e_conclusao.md  06_observabilidade.md  07_testes_avancados.md  08_rate_limiting.md  99_roadmap_de_evolucao.md
submissions/cezarfuhr/pix/tests/: conftest.py  test_payouts_api.py  test_rate_limiter.py  test_robustness_e2e.py  test_services.py  test_validations.py
